# MovieVault

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  diesel.toml  env.example
backend/migrations/202411100001_create_movievault_schema/: down.sql  up.sql
backend/migrations/20250101000000_initial_schema/: up.sql
backend/src/: config.rs  db.rs  main.rs  schema.rs
docs/: Build Plan.md  Database Schema- Movie Collection.md  MySQL-Compatible CREATE TABLE Script.md  Product Specification.md  Project Task Plan.md  System Architecture.md
frontend/: env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppLayout.tsx
frontend/src/pages/: AddMoviePage.tsx  AdminDashboardPage.tsx  HomePage.tsx  MovieDetailPage.tsx
frontend/src/services/: apiClient.ts
frontend/src/styles/: global.css
infra/env/: development.env.example
