[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
diesel = { version = "2.2.1", features = ["mysql", "r2d2", "chrono"] }
diesel_migrations = "2.2.0"
anyhow = "1.0"
r2d2 = "0.8"
